changes' is much more useful than 'misc edits' or 'code cleanup'.
3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------

plugins/cfpython/cfpython.c: Remove some Py_DECREF() calls in the python module.
  This fixes bug #2459929 (DECREF error, bombs server if python is strict).
  However, I'm not sure this is the correct way to fix that bug.
Arvid Norlander 2009-01-29

macros/cf_python.m4: Add python 2.6 to the python path search lists as well.
Arvid Norlander 2009-01-28

include/newserver.h, socket/init.c, socket/request.c: Remove MapMode
  type/mapmode field since only one mode is supported.
Andreas Kirschbaum 2009-01-28

common/shstr.c, common/arch.c, common/path.c: Fix some int that should have been
  size_t, found using splint.
common/arch.c: Also fix an "int" that should have been "unsigned long".
include/libproto.h, include/path.h: Update prototypes where needed for these int
  to size_t changes.
Arvid Norlander 2009-01-28

macros/libtool.m4: Removed this file as it depends on which libtool version is
  installed on the system running autogen.sh. configure will fail with an error
  if version doesn't match between this file and the generated (non-versioned)
  file utils/ltmain.sh. autogen.sh will install the correct version of
  macros/libtool.m4 as long as a newer version doesn't exist. Thus removing this
  file from SVN is the correct way to solve the issue. This file _should_
  however be included in release tarballs since utils/ltmain.sh will also be
  included there.
macros/: Added svn:ignore for libtool.m4
Arvid Norlander 2009-01-27

server/plugins.c: Set plugins_list to NULL when unloading plugins at exit to